@@ -1334,7 +1334,7 @@ public class FnArrayOf<T> {
                     this.function.execute(element, new ExecCtxImpl(Integer.valueOf(index)));
                 if (elementResult == null) {
                     throw new ExecutionException("Evaluation function returned null, which is " +
-                            "not allowed executing \"any\"");
+                            "not allowed executing \"all\"");
                 }
                 if (!elementResult.booleanValue()) {
                     return Boolean.FALSE;
