@@ -233,6 +233,24 @@ public final class FnCalendar {
     
     
     
+    
+    public static final Function<Object,Boolean> isNull() {
+        return FnObject.isNull();
+    }
+    
+    public static final Function<Object,Boolean> isNotNull() {
+        return FnObject.isNotNull();
+    }
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
 	
 
 	
