@@ -496,6 +496,16 @@ public final class FnString {
     
     
     
+    public static final Function<Object,Boolean> isNull() {
+        return FnObject.isNull();
+    }
+    
+    public static final Function<Object,Boolean> isNotNull() {
+        return FnObject.isNotNull();
+    }
+    
+    
+    
     
     
 
